[package]
name = "advent2019-rs"
version = "0.1.0"
authors = ["Brandon Saint-John <bsaintjo@ucsc.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"

[[bin]]
name = "day1-1"
path = "src/bin/day1-1.rs"

[[bin]]
name = "day1-2"
path = "src/bin/day1-2.rs"

[[bin]]
name = "day2-1"
path = "src/bin/day2-1.rs"

[[bin]]
name = "day2-2"
path = "src/bin/day2-2.rs"

[[bin]]
name = "day3-1"
path = "src/bin/day3-1.rs"

[[bin]]
name = "day3-2"
path = "src/bin/day3-2.rs"

[[bin]]
name = "day4-1"
path = "src/bin/day4-1.rs"
